Small fix on CNAME

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ layout: landing
 						<div class="inner">
 							<header class="major">
 								<h2>We provide the most proven solutions</h2>
-								<p>SAFE Engineering is one of the most trusted sources for solving complex IT problems.<br />
+								<p>SAFE AF Engineering is one of the most trusted sources for solving complex IT problems.<br />
 								We provide an unparalleled depth of knowledge and insight into the intelligence community for our customers and vendor partners.
 							</header>
 							<ul class="features">
@@ -84,7 +84,7 @@ layout: landing
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Connect with SAFE</h2>
+								<h2>Connect with SAFE AF</h2>
 								<p>People working together every day to create an inclusive atmosphere of ongoing inspiration</p>
 							</header>
 							<ul class="actions vertical">
