--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ layout: landing
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>A re-engineering of the current world view<br />
-								for a new holistic distributed computing solution</h2>
+								<h2>Re-engineering our world through<br />
+								 innovative holistic distributed computing solutions</h2>
 								<p>We strive to be highly responsive to our customers, and proactive in anticipating <br />
 								their needs and finding the best solutions in a time-sensitive manner.</p>
 							</header>
